refactor: optimize the project structure and add styles

--- a/src/app/components/main.page/main.page.component.html
+++ b/src/app/components/main.page/main.page.component.html
@@ -1,5 +1,7 @@
-@if (isLoading()) {
-  <mat-spinner diameter="50"></mat-spinner>
-} @else {
-  <app-table [data]="data()" (openModal)="openModal($event)"/>
-}
+<section class="table-section">
+  <mat-form-field>
+    <mat-label>Filter</mat-label>
+    <input matInput (keyup)="applyFilter($event)">
+  </mat-form-field>
+  <app-table [loading]="isLoading()" [data]="data()" [filter]="filter()" (openModal)="openModal($event)"/>
+</section>
