--- a/src/app/components/main.page/components/table/table.component.html
+++ b/src/app/components/main.page/components/table/table.component.html
@@ -1,17 +1,22 @@
-<mat-form-field>
-  <mat-label>Filter</mat-label>
-  <input matInput (keyup)="applyFilter($event)" #input>
-</mat-form-field>
-<table mat-table [dataSource]="tableData()" class="mat-elevation-z8">
-  @for (column of displayedColumns(); track column) {
+@if (loading()) {
+  <app-loading-shade/>
+}
+<table mat-table [dataSource]="tableData()" class="table mat-elevation-z4">
+  @for (column of displayedColumns(); track column; ) {
     <ng-container matColumnDef="{{ column }}">
       <th mat-header-cell *matHeaderCellDef> {{ column | tableColumn }}</th>
       <td mat-cell *matCellDef="let element"> {{ element[column] }}</td>
     </ng-container>
   }
   <tr mat-header-row *matHeaderRowDef="displayedColumns()"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns();" (click)="openModal.emit([row, $event])"></tr>
-  <tr class="mat-row" *matNoDataRow>
-    <td class="mat-cell" colspan="4">No data matching the filter "{{ input.value }}"</td>
-  </tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayedColumns();"
+    (click)="openModal.emit([row, $event])"
+  ></tr>
+  @if (!loading()) {
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{ filter() }}"</td>
+    </tr>
+  }
 </table>
