--- a/src/app/components/main.page/main.page.component.html
+++ b/src/app/components/main.page/main.page.component.html
@@ -1,7 +1,14 @@
 <section class="table-section">
-  <mat-form-field>
+  <mat-form-field class="filter-input">
     <mat-label>Filter</mat-label>
-    <input matInput (keyup)="applyFilter($event)">
+    <input matInput [(ngModel)]="filterInputValue">
+    @if (filterInputValue()) {
+      <button matSuffix mat-icon-button aria-label="Clear" (click)="resetFilter()">
+        <mat-icon>close</mat-icon>
+      </button>
+    }
   </mat-form-field>
-  <app-table [loading]="isLoading()" [data]="data()" [filter]="filter()" (openModal)="openModal($event)"/>
+  <ng-container *rxLet="filter$; let filter;">
+    <app-table [loading]="isLoading()" [data]="data()" [filter]="filter" (openModal)="openModal($event)"/>
+  </ng-container>
 </section>
